samples/_failures_safe/1761661591_c1f522_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7821c1da.c: In function ‘main’:
./samples/SAFE/__tmp_7821c1da.c:158:9: error: expected expression at end of input
  158 |         if (command ==
      |         ^~
./samples/SAFE/__tmp_7821c1da.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7821c1da.c:158:9: error: expected declaration or statement at end of input
